--- a/email_verification/templates/email_verification/pre-login-success.html
+++ b/email_verification/templates/email_verification/pre-login-success.html
@@ -44,7 +44,7 @@
     <main>
         <div class="wrapper">
             <div class="text">
-                <p>Your email has been verified. You can now visit the site to log in.</p>
+                <p>Your email has been verified. Click on the button below to login</p>
             </div>
             <a id="btn" href="{% url login_url %}">Login</a>
         </div>
